Update content or design

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,5 +11,5 @@ bod::-webkit-scrollbar {
 }
 
 .hero-bg-img {
-  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRR_bqouJALWNJLri0m0BfOO0w5VJBPi77hm1LK1XVUAQ&s");
+  background-image: url("../public/images/bg-hero2.JPG");
 }
